refactor : 수강 관련 responseDTO 서비스단으로 수정